--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -18,3 +18,10 @@ $mobile-pad: 15px 5% 15px 5%;
   justify-content: center;
   align-items: center;
 }
+
+@mixin transition {
+  transition: 1s;
+  -webkit-transition: 1s;
+  -moz-transition: 1s;
+  -o-transition: 1s;
+}
